--- a/package.xml
+++ b/package.xml
@@ -1,3 +1,7 @@
+//SPDX-License-Identifier: GPL-3.0
+//Copyright (C) 2020 Ryuichi Ueda & Tatsuya Sasho.
+
+
 <?xml version="1.0"?>
 <package format="2">
   <name>mypkg</name>
